# pam4j

./: .gitignore  Linux_amd64.properties  Mac OS X_i386.properties  build.properties  build.xml  default.properties  jpam.ipr  jpam.iws  pom.xml
ant/: Linux_x86.properties  Mac OS X_ppc.properties  SunOS_sparc.properties  build.properties
config/: checkstyle.xml
old/: PamHandle.c
oldstuff/rpm/rpmbuild-nonroot/: .rpmmacros  README
oldstuff/site/: index.html  maven-site.vm  site.xml
oldstuff/site/apt/: .aptconvert  index.apt  nameandlogo.apt  roadmap.apt  samples.apt  sponsors.apt  who_is_using.apt
oldstuff/site/apt/documentation/: dependencies.apt  faq.apt  introduction.apt  limitations.apt  preface.apt
oldstuff/site/resources/book/: title_page.odt
src/changes/: changes.xml
src/main/c/: .gitignore  CMakeLists.txt  Makefile  Pam.c  PamHandle.c  PamHandle.h  PamHandle2.c  log.c  log.h  makefile
src/main/config/HP-UX_ia64/: net-sf-jpam
src/main/config/HP-UX_itanium/: .java.login.config  net-sf-jpam-securid
src/main/config/Linux_amd64/: net-sf-jpam  net-sf-jpam-digipass
src/main/config/Linux_x86/: net-sf-jpam  net-sf-jpam-securid
src/main/config/Linux_x86_64/: net-sf-jpam  net-sf-jpam-digipass
src/main/config/Mac OS X_ppc/: net-sf-jpam
src/main/config/SunOS_sparc/: net-sf-jpam  (+1 more)
src/main/rpm/: jpam.spec
src/site/: maven-site.vm  site.xml  upload.sh
src/site/apt/: features.apt  index.apt  nameandlogo.apt  news.apt  roadmap.apt  samples.apt  sponsors.apt  support.apt  who_is_using.apt
src/site/stylesheets/: documentation.css
(+37 files in other folders)
